--- a/xterm.log.html
+++ b/xterm.log.html
@@ -3,7 +3,7 @@
  *****************************************************************************
  * this file is part of xterm                                                *
  *                                                                           *
- * Copyright 1997-2009,2010 by Thomas E. Dickey                              *
+ * Copyright 1997-2010,2011 by Thomas E. Dickey                              *
  *                                                                           *
  * All Rights Reserved                                                       *
  *                                                                           *
@@ -31,7 +31,7 @@
  * sale, use or other dealings in this Software without prior written        *
  * authorization.                                                            *
  *****************************************************************************
-  $XTermId: xterm.log.html,v 1.984 2010/10/25 00:33:56 tom Exp $
+  $XTermId: xterm.log.html,v 1.1009 2011/02/10 09:36:17 tom Exp $
   -->
 <HTML>
 <HEAD>
@@ -56,6 +56,8 @@ Most of these are summarized in the XFree86 CHANGELOG
 is the latest version of this file.
 
 <UL>
+<LI><A HREF="#xterm_268">Patch #268 - 2011/02/10</A>
+<LI><A HREF="#xterm_267">Patch #267 - 2010/11/20</A>
 <LI><A HREF="#xterm_266">Patch #266 - 2010/10/24</A>
 <LI><A HREF="#xterm_265">Patch #265 - 2010/10/22</A>
 <LI><A HREF="#xterm_264">Patch #264 - 2010/10/14</A>
@@ -324,6 +326,82 @@ is the latest version of this file.
 <LI><A HREF="#xterm_02">Patch #2 - 1996/1/7</A>
 <LI><A HREF="#xterm_01">Patch #1 - 1996/1/6</A>
 </UL>
+
+<H1><A NAME="xterm_268">Patch #268 - 2011/02/10</A></H1>
+<ul>
+	<li>fix an inconsistency of the "Enable Reverse Video" checkbox in
+	    the VT Options menu.
+	    This also removes a special case
+	    added in <a href="#xterm_217">patch #217</a>
+	    which limited the effect of the <code>reverseVideo</code> resource
+	    (Debian #603808).
+
+	<li>amend decoding of misformed UTF-8 sequences to avoid absorbing
+	    valid characters as documented in Unicode 6.0 section 3.9
+	    (report by Keith Winstein).
+
+	<li>do not set urgency hint when window already has focus
+	    (patch by Dimitrios Christidis).
+
+	<li>amend extended mouse-coordinate mode from
+	    <a href="#xterm_262">patch #262</a> changes to include
+	    the <em>Cb</em> button-code, which also may be greater than 127
+	    (report by Ailin Nemui).
+
+	<li>ensure that underline-cursor is visible when an application happens
+	    to set the background color (report by Christian Weisgerber).
+
+	<li>add feature for
+	    <a href="http://www.davidsimmons.com/soft/xtermhacks/xterm-fullscreen.patch">full-screen toggling</a>
+	    using either Alt-Enter
+	    or a menu selection
+	    (integrated patch by Dave Simmons).
+
+	<li>add missing logic to handle reallocation of FIFO index for the
+	    "UTF-8" menu entry (report by David Holland, NetBSD #44344).
+	    
+	<li>add makefile rules <code>docs-ctlseqs</code>,
+	    <code>docs-xterm</code>, etc.
+
+	<li>correct typo in description of DECRPM in control sequences
+	    document (report by Ailin Nemui).
+</ul>
+
+<H1><A NAME="xterm_267">Patch #267 - 2010/11/20</A></H1>
+<ul>
+	<li>minor formatting changes to ctlseqs.ms to simplify a script which
+	    extracts the feature information.  See the results in
+<a href="http://invisible-island.net/xterm/xterm.faq.html#compare_versions">Comparing versions, by counting controls</a> in the xterm FAQ.
+
+	<li>add <code>docs-clean</code> makefile rule.
+
+	<li>add <code>copy-selection</code> action (request by 
+	    Timo Juhani Lindfors, Debian #588785).
+
+	<li>trim leading/trailing blanks from string used for "Selection"
+	    font-menu data.
+
+	<li>trim leading/trailing blanks from color resource values.
+
+	<li>configure script improvements:
+	<ul>
+	<li>add workaround for removal of X11 dependency from Xt's package
+	    file (report by Robert Hooker).
+
+	<li>add workaround for removal of fontconfig dependency from Xft's
+	    package file (report by Jeremy Huddleston).
+
+	<li>add workaround for removal of Xmu dependency from Xaw's package
+	    file (report by Jeremy Huddleston).
+
+	<li>improve workaround in <code>CF_X_TOOLKIT</code> macro,
+	    checking for other
+	    possible packages where Xt's dependencies may be given.
+
+	<li>prefer <code>${name:=value}</code> to <code>${name-value}</code>,
+	    since recent bash changes break legacy support for that feature.
+	</ul>
+</ul>
 
 <H1><A NAME="xterm_266">Patch #266 - 2010/10/24</A></H1>
 <ul>
